kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: styrcan
  labels:
    name: styrcan
    environment: production
